--- a/Project2/Project2/Project2.vcxproj
+++ b/Project2/Project2/Project2.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{BDBD509D-A797-4EF0-A9E3-F2D710A9FBCC}</ProjectGuid>
+    <ProjectGuid>{E8828E08-B780-42B2-ACF7-A7EE59CA933F}</ProjectGuid>
     <RootNamespace>Project2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -115,12 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="Book.cpp" />
+    <ClCompile Include="BookShop.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="book.txt" />
-    <Text Include="rent.txt" />
-    <Text Include="user.txt" />
+    <ClInclude Include="Book.h" />
+    <ClInclude Include="BookShop.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
