--- a/Project2/Project2/Project2.vcxproj.filters
+++ b/Project2/Project2/Project2.vcxproj.filters
@@ -45,7 +45,10 @@
     <ClCompile Include="Item.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="UserData.cpp">
+    <ClCompile Include="Magazine.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MagazineShop.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -77,7 +80,10 @@
     <ClInclude Include="Item.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="UserData.h">
+    <ClInclude Include="Magazine.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MagazineShop.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
